# microsum

./: .clang-format  .editorconfig  README.md  meson.build  meson.options  microsum.pc.in
cli/: cli.c  cli.h  main.c  meson.build
inc/: meson.build
inc/microsum/: config.h.in  core.h  macros.h  meson.build  query.h
inc/microsum/crc/: crc8.h
lib/: core.c  meson.build  query.c
lib/crc/: crc8.c
scripts/: commit.py  date.py
